# gateway_modbus_iot

./: .gitignore  CMakeLists.txt  README.md  project.yml
frontend/: client.py
main/: CMakeLists.txt  api_config.c  flash_mem.c  main.c  mqtt.c  portal_wifi_ap.c
main/include/: base.h  flash_mem.h  mqtt.h  portal_wifi_ap.h
src/: esp_attr.h  esp_compiler.h
test/: test_flash.c
